deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fortune-demo
    app.kubernetes.io/component: fortune-demo
    app.kubernetes.io/instance: fortune-demo
  name: fortune-demo
  namespace: fortune-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: fortune-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: fortune-demo
    spec:
      containers:
      - image: bcorpusjr/fortune-demo:v2
        imagePullPolicy: IfNotPresent
        name: fortune-demo
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
