service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fortune-demo
  name: fortune-demo
  namespace: fortune-demo
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    deployment: fortune-demo
  sessionAffinity: None
  type: ClusterIP
