route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fortune-demo
    app.kubernetes.io/component: fortune-demo
    app.kubernetes.io/instance: fortune-demo
  name: fortune-demo
  namespace: fortune-demo
spec:
  host: fortune-demo-fortune-demo.apps-crc.testing
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: fortune-demo
    weight: 100
  wildcardPolicy: None
